# blogpost_app

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
migrations/: 20241003200321_blogpost.sql
src/: db_connect.rs  error.rs  image_service.rs  main.rs
src/controllers/: blogpost.rs  mod.rs
src/models/: blogpost.rs
src/views/: home_view.html
