[package]
name = "blogpost_app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = {version = "0.7.7", features =["macros"]}
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "json", "sqlite"] }
tokio = {version ="1.40.0", features= ["full"]}
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

