[package]
name = "blogpost_app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = {version = "0.7.7", features =["macros"]}
base64 = "0.22.1"
chrono = "0.4.38"
futures = "0.3.31"
reqwest = "0.12.8"
serde = "1.0.210"
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "json", "sqlite"] }
tokio = {version ="1.40.0", features= ["full"]}
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = {version = "1.10.0", features=["v4"]}

[dev-dependencies]
tempfile = "3.13.0"
